--- a/settings.json
+++ b/settings.json
@@ -16,15 +16,15 @@
         {
             "name": "긴 얼굴",
             "title": "긴 얼굴형",
-            "explain": "활발하고 에너지가 넘치는 당신은 첫인상부터 밝고 친근한 이미지를 준다. 명랑하고 긍정적인 태도로 주변 사람들을 기분 좋게 만들며, 사교성이 뛰어나 항상 사람들 사이에서 인기가 많다. 주도적이고 자신감 넘치며, 상황을 주도하는 리더십을 가지고 있어 어디서든 눈에 띈다. 따뜻하고 다정한 성격으로 애인에게 항상 신뢰와 안정감을 주는 당신은 말과 닮았다!",
+            "explain": "얼굴이 전체적으로 길어보이하나, 긴 얼굴형은 단점보다는 장점이 더 많은 얼굴형입니다. 본인의 매력을 살릴 수 있는 헤어스타일, 메이크업, 액세서리를 활용하여 자신감 넘치는 모습을 연출하세요!",
             "celeb": "긴 얼굴 연예인: 김수현, 남궁민, 채수빈, 로제(블랙핑크), 려원",
             "color": "rgba(251, 176, 59, 1)"
         },
         {
             "name": "각진 얼굴",
             "title": "각진 얼굴",
-            "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!",
-            "celeb": "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
+            "explain": "각진 얼굴형은 얼굴 윤곽이 선명하고 턱 라인이 뚜렷한 얼굴형입니다. 매력적이고 자신감 넘치는 이미지를 주는 얼굴형입니다!",
+            "celeb": "고양이상 연예인: 이병헌, 박서준, 김우빈",
             "color": "rgba(265, 100, 50, 1)"
         }
     ]
