--- a/settings.json
+++ b/settings.json
@@ -10,13 +10,13 @@
             "name": "계란형",
             "title": "계란형 얼굴",
             "explain": "얼굴의 너비 대비 길이가 1:1.3~1.45 정도로 가장 이상적인 비율로 여겨지는 얼굴형으로 , 조화롭고 매력적인 얼굴형입니다!",
-            "celeb": "계란형 얼굴 연예인: 김태리, 아이유, 수지, 이동욱, 정해",
+            "celeb": "계란형 얼굴 연예인: 김태리, 아이유, 수지, 이동욱, 정해인",
             "color": "rgba(27, 175, 234, 1)"
         },
         {
             "name": "긴 얼굴",
             "title": "긴 얼굴형",
-            "explain": "얼굴이 전체적으로 길어보이하나, 긴 얼굴형은 단점보다는 장점이 더 많은 얼굴형입니다. 본인의 매력을 살릴 수 있는 헤어스타일, 메이크업, 액세서리를 활용하여 자신감 넘치는 모습을 연출하세요!",
+            "explain": "얼굴이 전체적으로 길어보이긴하나, 긴 얼굴형은 단점보다는 장점이 더 많은 얼굴형입니다. 본인의 매력을 살릴 수 있는 헤어스타일, 메이크업, 액세서리를 활용하여 자신감 넘치는 모습을 연출하세요!",
             "celeb": "긴 얼굴 연예인: 김수현, 남궁민, 채수빈, 로제(블랙핑크), 려원",
             "color": "rgba(251, 176, 59, 1)"
         },
